--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
     "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
+    "jest-resolve": "^23.6.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -69,8 +70,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-
-
   "eslintConfig": {
     "extends": "react-app"
   },
