--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "books-store",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://odnolko_andrew.github.io/books-store",
+  "homepage": "https://andreiodnolko.github.io/book-Shop/",
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
